--- a/app/src/main/res/layout/articles_item.xml
+++ b/app/src/main/res/layout/articles_item.xml
@@ -30,7 +30,7 @@
         android:maxLines="1"
         app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
         app:layout_constraintBottom_toTopOf="@+id/item_list_desc"
-        tools:text="title" />
+        tools:text="@string/title" />
 
     <TextView
         android:id="@+id/item_list_desc"
@@ -42,7 +42,7 @@
         android:maxLines="4"
         app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
         app:layout_constraintTop_toTopOf="@+id/item_list_avatar"
-        tools:text="description" />
+        tools:text="@string/description" />
 
     <TextView
         android:id="@+id/item_list_author"
@@ -55,7 +55,7 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
         app:layout_constraintTop_toBottomOf="@+id/item_list_desc"
-        tools:text="author" />
+        tools:text="@string/author" />
 
     <TextView
         android:id="@+id/item_list_date"
@@ -68,7 +68,7 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/item_list_author"
         app:layout_constraintTop_toBottomOf="@+id/item_list_desc"
-        tools:text="date" />
+        tools:text="@string/date" />
 
     <ImageButton
         android:id="@+id/item_list_favorite_button"
