--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -20,33 +20,11 @@
             tools:layout_editor_absoluteY="0dp">
 
             <TextView
-                android:id="@+id/text_last_articles"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="15dp"
-                android:text="@string/dernierArticles"
-                android:textColor="@color/purple_500"
-                android:textSize="15dp" />
-
-
-            <FrameLayout
-                android:id="@+id/fragment_list_all"
-                android:layout_width="match_parent"
-                android:layout_height="225dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                tools:listitem="@layout/articles_item" />
-
-            <TextView
                 android:id="@+id/text_last_categories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold|italic"
                 android:layout_marginBottom="3dp"
                 android:text="@string/allArticles"
                 android:textColor="@color/purple_500"
@@ -56,8 +34,8 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="30dp"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/byEditor"
                 android:textColor="@color/purple_500"
@@ -72,7 +50,7 @@
                 <FrameLayout
                     android:id="@+id/fragment_list_editor"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -88,13 +66,12 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
+                android:gravity="center_horizontal"
                 android:text="@string/byCategorie"
                 android:textColor="@color/purple_500"
                 android:textSize="15dp" />
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -104,7 +81,7 @@
                 <FrameLayout
                     android:id="@+id/fragment_list_categories"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -117,7 +94,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:gravity="center_horizontal"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/byCountry"
@@ -133,7 +110,7 @@
                 <FrameLayout
                     android:id="@+id/fragment_list_country"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
@@ -142,6 +119,29 @@
                     app:layout_constraintVertical_bias="0.0" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/text_last_articles"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="15dp"
+                android:textStyle="bold|italic"
+                android:text="@string/dernierArticles"
+                android:textColor="@color/purple_500"
+                android:textSize="15dp" />
+
+            <FrameLayout
+                android:id="@+id/fragment_list_all"
+                android:layout_width="match_parent"
+                android:layout_height="275dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                tools:listitem="@layout/articles_item" />
 
         </LinearLayout>
 
