--- a/app/src/main/res/layout/article_details.xml
+++ b/app/src/main/res/layout/article_details.xml
@@ -73,7 +73,7 @@
         tools:text="@string/date" />
 
     <TextView
-        android:id="@+id/item_list_editeur"
+        android:id="@+id/item_list_editor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
