--- a/app/src/main/res/layout/aboutus.xml
+++ b/app/src/main/res/layout/aboutus.xml
@@ -90,6 +90,30 @@
                 android:layout_marginBottom="5dp"
                 android:text="Retrofit"
                 android:textSize="16dp" />
+            <TextView
+                android:layout_marginStart="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="RecyclerView"
+                android:textSize="16dp" />
+            <TextView
+                android:layout_marginStart="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="AppCompat"
+                android:textSize="16dp" />
+            <TextView
+                android:layout_marginStart="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="Glide"
+                android:textSize="16dp" />
 
 
 
