--- a/app/src/main/res/layout/article_details.xml
+++ b/app/src/main/res/layout/article_details.xml
@@ -37,6 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_list_avatar"
+        android:textStyle="bold"
         tools:text="@string/title" />
 
     <TextView
