--- a/app/src/main/res/menu/menu_m.xml
+++ b/app/src/main/res/menu/menu_m.xml
@@ -2,12 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_search"
-        android:title="action_search"
-        android:icon="@drawable/ic_baseline_search_24"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="androidx.appcompat.widget.SearchView" />
-
     <item
         android:orderInCategory="100"
         android:title="À propos de nous"
@@ -15,17 +9,16 @@
         android:id="@+id/btn_a_propos"/>
 
     <item
-        android:title="Favoris"
-        android:id="@+id/btn_favorite_toolbar"
-        android:orderInCategory="200"
-        android:icon="@drawable/ic_baseline_favorite_24"
-        app:showAsAction="ifRoom" />
-
-    <item
         android:title="Home"
         android:id="@+id/btn_home_toolbar"
         android:orderInCategory="200"
         android:icon="@drawable/ic_baseline_home_24"
+        app:showAsAction="always" />
+    <item
+        android:title="Favoris"
+        android:id="@+id/btn_favorite_toolbar"
+        android:orderInCategory="200"
+        android:icon="@drawable/ic_baseline_favorite_24"
         app:showAsAction="ifRoom" />
 
 </menu>
